# xbox9

./: Makefile  README.md
confs/: UTILX9_IMX8MM.conf  UTILX9_X86.conf
confs/common/: 01-install.conf  02-xflags.conf  11-common.conf  12-mk.conf  14-special.conf  15-venv.conf  16-alias.conf  99-print.conf  requirements.txt
confs/sh/: gen-export.sh
helloworld/: Makefile  helloworld-int-conversion.c  helloworld.c  helloworld.h  helloworld_dbg.c  helloworld_dbg.h  helloworld_json.c  helloworld_json.h  helloworld_simple.c  helloworld_warning.c  meson.build  pipe2.c  simplescan.c
include/: dbus_def.h  query_def.h  ubus_def.h
libs/: Makefile  descript.ion
libs/cJSON/: Makefile.mipsel
libs/curl/: Makefile.aarch64  Makefile.i486  Makefile.mipsel  Makefile.x86
libs/curl/cert/: descript.ion
libs/dbus/: Makefile.aarch64  Makefile.mipsel  Makefile.x86
libs/jansson/: Makefile.aarch64  Makefile.mipsel
libs/libpsl/: Makefile.mipsel  Makefile.x86
libs/libusb/: Makefile.aarch64  Makefile.mipsel  Makefile.x86
libs/libusb/patches/libusb-1.0.21/: configure.ac
libs/libuv/: Makefile.aarch64  Makefile.i486  Makefile.mipsel
libs/libwebsockets/: Makefile.aarch64  Makefile.mipsel  Makefile.x86
libs/libwebsockets/patches/libwebsockets-3.2.2/: CMakeLists.txt
libs/libwebsockets/patches/libwebsockets-4.2.2/: CMakeLists.txt
libs/libwebsockets/patches/libwebsockets-4.2.2/cmake/: libwebsockets-config.cmake.in
libs/libwebsockets/patches/libwebsockets-4.3.5/: CMakeLists.txt
libs/libwebsockets/patches/libwebsockets-4.3.5/cmake/: libwebsockets-config.cmake.in
libs/mosquitto/: Makefile.aarch64  Makefile.mipsel  Makefile.x86
libs/mosquitto/etc/: mosquitto.conf
libs/mosquitto/patches/mosquitto-1.6.8/: config.mk
libs/mosquitto/patches/mosquitto-1.6.8/lib/: net_mosq.c  options.c
libs/mosquitto/patches/mosquitto-2.0.14/: config.mk
libs/mosquitto/patches/mosquitto-2.0.14/lib/: net_mosq.c  options.c
libs/mosquitto/patches/mosquitto-2.0.20/: config.mk
libs/openssl/: Makefile  Makefile.aarch64  Makefile.i486  Makefile.mipsel  Makefile.x86
libs/openssl/patches/: openssl-1.0.2n.patch  openssl-1.0.2u.patch  openssl-OpenSSL_1_1_1k.patch
libs/openssl/patches/openssl-1.0.2j/ssl/: ssl_lib.c
libs/openssl/patches/openssl-OpenSSL_1_1_1k/: libssl.map
libs/utilx9/: Makefile.i486  Makefile.mipsel
libs/utilx9/patches/utilx9-3.2.0/: library.mk
mk/: define.mk  function.mk  sdk.mk  svn-external.mk  target.mk
mk/cmake/: build_aarch64.cmake  build_mipsel.cmake  build_x86.cmake
mk/kernel/: kernel.mk
mk/libs/: library_init.mk  library_pub.mk  libs.mk  libx.mk
mk/meson_public/: build_mipsel.meson  meson.build
mk/platform/: platform.mk
mk/romfs/: romfs.mk
mk/user/: common.mk  iot.mk
mk/user/customer/: 01-customer.mk
user/: Makefile
user/common/usbHunter/: Makefile  README.md  usbHunter.c  usbHunter.h
(+16 files in other folders)
